adapted to use coverage_from_date and coverage_to_date

--- a/ckanext/datesearch/templates/package/date_facet_slider.html
+++ b/ckanext/datesearch/templates/package/date_facet_slider.html
@@ -6,13 +6,13 @@ Displays a slider widget to define a date filter on the dataset search page side
 
 <section class="module module-narrow module-shallow js-hide" data-module="date-facet" data-module-begin="{{ date_range[0] }}" data-module-end="{{ date_range[1] }}" data-module-default_begin="{{ default_dates[0] }}" data-module-default_end="{{ default_dates[1] }}">
   <h2 class="module-heading">
-    {{ _('Date of Collection') }}
+    {{ _('Coverage Date') }}
     <a href="{{ h.remove_url_param(['ext_begin_date', 'ext_end_date']) }}" class="action">
       {{ _('Clear') }}
     </a>
   </h2>
-  <input type="text" name="begin" placeholder="{{ _('Begin Date') }}" value="{{ default_dates[0] }}" />
-  <input type="text" name="end" placeholder="{{ _('End Date') }}" value="{{ default_dates[1] }}" />
+  <input type="text" name="begin" placeholder="{{ _('From Date') }}" value="{{ default_dates[0] }}" />
+  <input type="text" name="end" placeholder="{{ _('To Date') }}" value="{{ default_dates[1] }}" />
   <button class="btn">{{ _('Update Search') }}</button>
 </section>
 
